update socket
